# devconf-schedules

./: README.md  devconf.py  main.py  pentabarf.py  pyproject.toml  sessionize.py  util.py
schedules/: devconf-2022-cape-town.pentabarf.xml  devconf-2022-johannesburg.pentabarf.xml  devconf-2022-virtual.pentabarf.xml  devconf-2023-cape-town.pentabarf.xml  devconf-2023-pretoria.pentabarf.xml  devconf-2024-cape-town.pentabarf.xml  devconf-2024-johannesburg.pentabarf.xml  devconf-cape-town-2022.pentabarf.xml  devconf-johannesburg-2022.pentabarf.xml  devconf-virtual-2022.pentabarf.xml
