[tool.poetry]
name = "devconf-schedules"
version = "0.1.0"
description = ""
authors = ["Michael Evans <michaelgrahamevans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
devtools = "^0.8.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
types-requests = "^2.27.1"
types-beautifulsoup4 = "^4.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
